--- a/ui_Files/circulationapp.ui
+++ b/ui_Files/circulationapp.ui
@@ -74,11 +74,11 @@
             <enum>Qt::Horizontal</enum>
            </property>
            <property name="sizeType">
-            <enum>QSizePolicy::Maximum</enum>
+            <enum>QSizePolicy::Fixed</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
-             <width>40</width>
+             <width>47</width>
              <height>20</height>
             </size>
            </property>
